Merge 212.5080.55 platform into kt-212-master
Commit is made by ./plugins/kotlin/merge-platform.sh script

GitOrigin-RevId: 92ae1d744beac1404c01ca427a6484ec501fd47c